add java engine

--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,11 @@
       <version>${ktor.version}</version>
     </dependency>
     <dependency>
+      <groupId>io.ktor</groupId>
+      <artifactId>ktor-client-java-jvm</artifactId>
+      <version>${ktor.version}</version>
+    </dependency>
+    <dependency>
       <groupId>com.github.luben</groupId>
       <artifactId>zstd-jni</artifactId>
       <version>1.5.2-3</version>
